[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Friends/FriendsPopup.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="FriendsPopup" type="Panel" groups=[
"FriendsPopup",
]]
self_modulate = Color( 0.309804, 0.952941, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 280.0
rect_min_size = Vector2( 560, 260 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSection" type="HBoxContainer" parent="Content"]
margin_right = 560.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Title" type="Label" parent="Content/TitleSection" groups=[
"Title",
]]
margin_top = 9.0
margin_right = 560.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 0, 1, 0.517647 )
text = "TEST"
align = 1

[node name="MainSection" type="HBoxContainer" parent="Content"]
margin_top = 64.0
margin_right = 560.0
margin_bottom = 157.0
size_flags_vertical = 3
alignment = 1

[node name="AddUserSection" type="VBoxContainer" parent="Content/MainSection" groups=[
"AddUserSection",
]]
margin_left = 30.0
margin_right = 530.0
margin_bottom = 93.0
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="Email" type="Label" parent="Content/MainSection/AddUserSection"]
margin_top = 25.0
margin_right = 500.0
margin_bottom = 39.0
text = "Email"
align = 1

[node name="EmailInput" type="LineEdit" parent="Content/MainSection/AddUserSection"]
margin_top = 43.0
margin_right = 500.0
margin_bottom = 67.0

[node name="ActionsSection" type="VBoxContainer" parent="Content/MainSection" groups=[
"ActionsSection",
]]
visible = false
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 93.0
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="Message" type="Label" parent="Content/MainSection/ActionsSection" groups=[
"ActionsSectionMessage",
]]
margin_top = 59.0
margin_right = 500.0
margin_bottom = 73.0
text = "Email"
align = 1

[node name="ReturnMessage" type="HBoxContainer" parent="Content"]
margin_top = 161.0
margin_right = 560.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 35 )
alignment = 1

[node name="Container" type="VBoxContainer" parent="Content/ReturnMessage"]
margin_left = 30.0
margin_right = 530.0
margin_bottom = 35.0
rect_min_size = Vector2( 500, 0 )

[node name="ReturnMessage" type="Label" parent="Content/ReturnMessage/Container"]
margin_right = 500.0
margin_bottom = 14.0
align = 1

[node name="ButtonsSection" type="HBoxContainer" parent="Content"]
margin_top = 200.0
margin_right = 560.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 60 )

[node name="BackSection" type="HBoxContainer" parent="Content/ButtonsSection"]
margin_right = 278.0
margin_bottom = 60.0
size_flags_horizontal = 3
alignment = 1

[node name="BackBtn" type="Button" parent="Content/ButtonsSection/BackSection"]
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="ActionsSection" type="HBoxContainer" parent="Content/ButtonsSection"]
margin_left = 282.0
margin_right = 560.0
margin_bottom = 60.0
size_flags_horizontal = 3
alignment = 1

[node name="AddBtn" type="Button" parent="Content/ButtonsSection/ActionsSection" groups=[
"ActionsButton",
"AddButton",
]]
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "ADD"

[node name="AcceptBtn" type="Button" parent="Content/ButtonsSection/ActionsSection" groups=[
"AcceptButton",
"ActionsButton",
]]
visible = false
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "ACCEPT"

[node name="RejectBtn" type="Button" parent="Content/ButtonsSection/ActionsSection" groups=[
"ActionsButton",
"RejectButton",
]]
visible = false
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "REJECT"

[node name="CancelBtn" type="Button" parent="Content/ButtonsSection/ActionsSection" groups=[
"ActionsButton",
"CancelButton",
]]
visible = false
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "CANCEL"

[node name="RemoveBtn" type="Button" parent="Content/ButtonsSection/ActionsSection" groups=[
"ActionsButton",
"RemoveButton",
]]
visible = false
margin_left = 79.0
margin_right = 199.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "DELETE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Content/ButtonsSection/BackSection/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="Content/ButtonsSection/ActionsSection/AddBtn" to="." method="_on_AddBtn_pressed"]
[connection signal="pressed" from="Content/ButtonsSection/ActionsSection/AcceptBtn" to="." method="_on_AcceptBtn_pressed"]
[connection signal="pressed" from="Content/ButtonsSection/ActionsSection/RejectBtn" to="." method="_on_RejectBtn_pressed"]
[connection signal="pressed" from="Content/ButtonsSection/ActionsSection/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="Content/ButtonsSection/ActionsSection/RemoveBtn" to="." method="_on_RemoveBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
